--- a/ui/template.html
+++ b/ui/template.html
@@ -10,7 +10,7 @@
             <a href="author.html">Author's dashboard</a> |
             <a href="description.html">Publish files</a> |
             <a href="post-link.html">Post link</a> |
-            <a href="create-category.html">Create category</a> |
+            <a href="edit-category.html">Create category</a> |
             <a href="vote.html">Vote</a> |
             <a href="settings.html">Settings</a> |
             <strong><a href="help.html">Help</a></strong> |
