validation of description

--- a/ui/template.html
+++ b/ui/template.html
@@ -2,6 +2,7 @@
     <head>
         <meta charset="utf-8"/>
         <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+        <link rel="stylesheet" type="text/css" href="css/style.css"/>
         <xi:include href="#head"/>
     </head>
     <body>
