validation in file upload

--- a/ui/upload.html
+++ b/ui/upload.html
@@ -3,6 +3,7 @@
         <title>Upload a File</title>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/web3/1.2.9/web3.min.js"></script>
         <script src="https://unpkg.com/arweave/bundles/web.bundle.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/jquery-validation@1.19.2/dist/jquery.validate.min.js"></script>
         <script src="artifacts/SmartWeave.js"></script>
         <script src="js/addresses2.js"></script>
         <script src="js/common.js"></script>
@@ -11,14 +12,17 @@
     <body>
         <h1 id="title">Upload a File</h1>
         <div id="body">
-            <p>Files set version: <input type="number" id="version"/></p>
-            <p>File format: <input type="text" id="format"/></p>
-            <p>File: <input type="file" id="file"/></p>
-            <p>AR wallet key file to pay for upload: <input type="file" id="arWalletKeyFile"/></p>
-            <p>WARNING: Your file will be made available at a URL containing a password. Anyone knowing
-                the password can download the file (however this may be illegal dependently on the
-                jurisdiction and the license). Removal of the uploaded file is not possible.</p>
-            <p><input type="button" value="submit" onclick="upload()"/></p>
+            <form id="form" onkeypress="return event.keyCode != 13;">
+                <p>Files set version: <input type="number" id="version" name="version" required="required"/></p>
+                <p>File format: <input type="text" id="format" name="format" required="required"/></p>
+                <p>File: <input type="file" id="file" name="file" required="required"/></p>
+                <p>AR wallet key file to pay for upload:
+                    <input type="file" id="arWalletKeyFile" name="arWalletKeyFile" required="required"/></p>
+                <p>WARNING: Your file will be made available at a URL containing a password. Anyone knowing
+                    the password can download the file (however this may be illegal dependently on the
+                    jurisdiction and the license). Removal of the uploaded file is not possible.</p>
+                <p><input type="button" value="submit" onclick="upload()"/></p>
+            </form>
         </div>
     </body>
 </html>
