edit-category.html validation

--- a/ui/edit-category.html
+++ b/ui/edit-category.html
@@ -4,6 +4,7 @@
         <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js"></script>
         <link rel="stylesheet" href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css"/>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/web3/1.2.9/web3.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/jquery-validation@1.19.2/dist/jquery.validate.min.js"></script>
         <script src="js/common.js"></script>
         <script src="js/category-chooser.js"></script>
         <script src="js/edit-category.js"></script>
@@ -15,17 +16,19 @@
     <body>
         <h1 id="title">Create/Edit Category</h1>
         <div id="body">
-            <p>Category name: <input type="text" id="title"/></p>
-            <p>Category language: <input type="text" id="locale" value="en"/></p>
-            <p id="ownedPar">Category is owned by you:
-                <input type="checkbox" id="owned"
-                       onclick="$('#ownedInfo').css('display', event.target.checked ? 'block' : 'none')"/>
-                (Others cannot post to a category owned by you, but owned categories receive
-                less promotion and search engine hits than regular categories. If doubt, leave unchecked.)</p>
-            <div id="ownedInfo" style="display: none">
-                <p>Short (meta) description: <textarea id="shortDescription"></textarea></p>
-                <p>Description: <textarea id="description"></textarea></p>
-            </div>
+            <form id="form" onkeypress="return event.keyCode != 13;">
+                <p>Category name: <input type="text" id="title" name="title" required="required"/></p>
+                <p>Category language: <input type="text" id="locale" value="en" name="locale" required="required"/></p>
+                <p id="ownedPar">Category is owned by you:
+                    <input type="checkbox" id="owned" name="owned"
+                        onclick="$('#ownedInfo').css('display', event.target.checked ? 'block' : 'none')"/>
+                    (Others cannot post to a category owned by you, but owned categories receive
+                    less promotion and search engine hits than regular categories. If doubt, leave unchecked.)</p>
+                <div id="ownedInfo" style="display: none">
+                    <p>Short (meta) description: <textarea id="shortDescription" name="shortDescription"></textarea></p>
+                    <p>Description: <textarea id="description" name="description"></textarea></p>
+                </div>
+            </form>
             <h2>Parent categories</h2>
             <p>You vote for parent categories with ETH, with the discount TODO.
                 For your owned parent categories voting is free.
