--- a/ui/vote.html
+++ b/ui/vote.html
@@ -5,6 +5,7 @@
         <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js"></script>
         <link rel="stylesheet" href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css"/>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/web3/1.2.9/web3.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/jquery-validation@1.19.2/dist/jquery.validate.min.js"></script>
         <script src="js/common.js"></script>
         <script src="js/category-chooser.js"></script>
         <script src="js/vote.js"></script>
@@ -12,11 +13,13 @@
     <body>
         <h1 id="title">Vote for Category Content or Subcategory</h1>
         <div id="body">
-            <p>Child item or category ID: <input type="number" id="child"/></p>
-            <p>Parent category ID: <input type="text" id="parent" class="category"/></p>
-            <p><label><input type="radio" name="dir" value="for"/> Vote for</label>
-                <label><input type="radio" name="dir" value="against"/> Vote against</label></p>
-            <p><input type="button" value="Vote" onclick="vote()"/></p>
+            <form id="form" onkeypress="return event.keyCode != 13;">
+                <p>Child item or category ID: <input type="number" id="child" name="child" required="required"/></p>
+                <p>Parent category ID: <input type="text" id="parent" class="category" name="category" required="required"/></p>
+                <p><label><input type="radio" name="dir" value="for" required="required"/> Vote for</label>
+                    <label><input type="radio" name="dir" value="against" required="required"/> Vote against</label></p>
+                <p><input type="button" value="Vote" onclick="vote()"/></p>
+            </form>
         </div>
     </body>
 </html>
