working on key chooser widget

--- a/ui/upload.html
+++ b/ui/upload.html
@@ -5,6 +5,7 @@
         <script src="https://unpkg.com/arweave/bundles/web.bundle.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/jquery-validation@1.19.2/dist/jquery.validate.min.js"></script>
         <script src="artifacts/SmartWeave.js"></script>
+        <script src="js/ar-key-chooser.js"></script>
         <script src="js/addresses2.js"></script>
         <script src="js/common.js"></script>
         <script src="js/upload.js"></script>
