--- a/ui/upload.html
+++ b/ui/upload.html
@@ -18,7 +18,7 @@
                 <p>File format: <input type="text" id="format" name="format" required="required"/></p>
                 <p>File: <input type="file" id="file" name="file" required="required"/></p>
                 <p>AR wallet key file to pay for upload:
-                    <input type="file" id="arWalletKeyFile" name="arWalletKeyFile" required="required"/></p>
+                    <input type="file" id="arWalletKeyFile" name="arWalletKeyFile"/></p>
                 <p>WARNING: Your file will be made available at a URL containing a password. Anyone knowing
                     the password can download the file (however this may be illegal dependently on the
                     jurisdiction and the license). Removal of the uploaded file is not possible.</p>
