--- a/ui/upload.html
+++ b/ui/upload.html
@@ -19,6 +19,8 @@
                 <p>File: <input type="file" id="file" name="file" required="required"/></p>
                 <p>AR wallet key file to pay for upload:
                     <input type="file" id="arWalletKeyFile" name="arWalletKeyFile"/></p>
+                <p style="font-size: smaller">For security reasons you are recommended to use another Arweave account than
+                    the account to which you receive profit.</p>
                 <p>WARNING: Your file will be made available at a URL containing a password. Anyone knowing
                     the password can download the file (however this may be illegal dependently on the
                     jurisdiction and the license). Removal of the uploaded file is not possible.</p>
