--- a/ui/upload.html
+++ b/ui/upload.html
@@ -20,7 +20,7 @@
                 <p>AR wallet key file to pay for upload:
                     <input type="file" id="arWalletKeyFile" name="arWalletKeyFile"/></p>
                 <p style="font-size: smaller">For security reasons you are recommended to use another Arweave account than
-                    the account to which you receive profit.</p>
+                    the account to which you receive profit or store significant funds.</p>
                 <p>WARNING: Your file will be made available at a URL containing a password. Anyone knowing
                     the password can download the file (however this may be illegal dependently on the
                     jurisdiction and the license). Removal of the uploaded file is not possible.</p>
