--- a/ui/download.html
+++ b/ui/download.html
@@ -6,6 +6,7 @@
         </style>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/web3/1.2.9/web3.min.js"></script>
         <script src="https://unpkg.com/arweave/bundles/web.bundle.min.js"></script>
+        <script src="js/ar-key-chooser.js"></script>
         <script src="artifacts/SmartWeave.js"></script>
         <script src="js/addresses2.js"></script>
         <script src="js/common.js"></script>
