empty and arweave: links

--- a/ui/entry.html
+++ b/ui/entry.html
@@ -16,7 +16,7 @@
             <ul id="categories"></ul>
             <p><a href="#" onclick="moreParents(); return false">More...</a> <a id="addParent">Add</a></p>
             <p>Language: <span id="locale"></span></p>
-            <p>Title: <a id="link"><span id="title"></span></a></p>
+            <p>Title: <span id="link"></span></p>
             <p>Description: <span id="description"></span></p>
         </div>
     </body>
