--- a/ui/upload.html
+++ b/ui/upload.html
@@ -5,10 +5,11 @@
         <script src="https://unpkg.com/arweave/bundles/web.bundle.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/jquery-validation@1.19.2/dist/jquery.validate.min.js"></script>
         <script src="artifacts/SmartWeave.js"></script>
-        <script src="js/ar-key-chooser.js"></script>
         <script src="js/addresses2.js"></script>
         <script src="js/common.js"></script>
+        <script src="js/ar-key-chooser.js"></script>
         <script src="js/upload.js"></script>
+        <script src="js/upload-file.js"></script>
     </head>
     <body>
         <h1 id="title">Upload a File</h1>
@@ -24,7 +25,7 @@
                 <p>WARNING: Your file will be made available at a URL containing a password. Anyone knowing
                     the password can download the file (however this may be illegal dependently on the
                     jurisdiction and the license). Removal of the uploaded file is not possible.</p>
-                <p><input type="button" value="submit" onclick="upload()"/></p>
+                <p><input type="button" value="submit" onclick="uploadFile()"/></p>
             </form>
         </div>
     </body>
