--- a/ui/post-link.html
+++ b/ui/post-link.html
@@ -15,9 +15,12 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/web3/1.2.9/web3.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/jquery-validation@1.19.2/dist/jquery.validate.min.js"></script>
         <script src="https://unpkg.com/arweave/bundles/web.bundle.min.js"></script>
+        <script src="js/addresses2.js"></script>
+        <script src="artifacts/SmartWeave.js"></script>
         <script src="js/common.js"></script>
         <script src="js/ar-key-chooser.js"></script>
         <script src="js/category-chooser.js"></script>
+        <script src="js/upload.js"></script>
         <script src="js/post-link.js"></script>
     </head>
     <body>
