--- a/ui/templates.html
+++ b/ui/templates.html
@@ -17,8 +17,10 @@
             <ul id="templates"></ul>
             <div id="dialog" style="display: none">
                 <form id="dialogForm">
-                    <p>Template name: <input type="text" name="name" required="required"/></p>
-                    <p>JavaScript URL: <input type="url" name="js" required="required"/></p>
+                    <input type="hidden" name="id"/>
+                    <p>Template name*: <input type="text" name="name" required="required"/></p>
+                    <p>JavaScript URL*: <input type="url" name="js" required="required"/></p>
+                    <p>Settings URL: <input type="url" name="settings"/></p>
                 </form>
             </div>
         </div>
