link to blog templates in settings

--- a/ui/settings.html
+++ b/ui/settings.html
@@ -16,6 +16,7 @@
                     <option value="0x4">Rinkeby (test mode)</option>
                 </select>
             </p>
+            <p><a href="templates.html">Blog templates</a></p>
         </div>
     </body>
 </html>
