--- a/ui/template.html
+++ b/ui/template.html
@@ -49,5 +49,7 @@
         <p style="display: none; color: red" id="testModeWarnining">Site works in test mode! Change <a href="settings.html">settings</a>.</p>
         <h1><xi:include href="#title"/></h1>
         <xi:include href="#body"/>
+        <div id="wait" style="display: none; position: fixed; top: 50%; left: 50%; margin-right: -50%;
+        transform: translate(-50%, -50%); width: 200px; height: 100px; border: 1px solid red; background: lightgray;">Don't close the window!</div>
     </body>
 </html>
