UI for choosing a template

--- a/ui/post-link.html
+++ b/ui/post-link.html
@@ -43,6 +43,11 @@
                         <p>Link: <input type="url" id="link" name="link" /></p>
                     </div>
                     <div id="tabs-blog">
+                        <p>Template:
+                            <select id="template" name="template">
+                                <option value="">(none)</option>
+                            </select>
+                        </p>
                         <textarea id="blogPost" name="blogPost"></textarea>
                         <p>AR wallet key file to pay for upload:
                             <input type="file" id="arWalletKeyFile" name="arWalletKeyFile"/></p>
