--- a/ui/shareholder.html
+++ b/ui/shareholder.html
@@ -18,7 +18,7 @@
                 (<code id="filesAddressElt"></code> token in MetaMask)</p>
             <p>Your earned amount in ETH: <span id="ETH"></span>
                 <input type="button" value="Withdraw" onclick="withdrawETH()"/></p>
-            <p>Your AR wallet (<a href="author.html">Set</a>): <span id="arWallet"></span></p>
+            <p>Your AR wallet (<a href="author.html">Set</a>): <code id="arWallet"></code></p>
             <p>Your AR profit sharing tokens: <span id="tokenAR"></span>
                 (AR profit is distributed automatically, you don't need to withdraw.)</p>
         </div>
