--- a/ui/post-link.html
+++ b/ui/post-link.html
@@ -47,6 +47,7 @@
                             <select id="template" name="template">
                                 <option value="">(none)</option>
                             </select>
+                            <a target="_blank" href="templates.html">Manage</a>
                         </p>
                         <textarea id="blogPost" name="blogPost"></textarea>
                         <p>AR wallet key file to pay for upload:
