--- a/ui/help.html
+++ b/ui/help.html
@@ -13,7 +13,7 @@
                 <li>files (e-books, audio, software, etc.) to sell or download</li>
                 <li>short messages like Twitter</li>
                 <li>Web links</li>
-                <li>blog posts (not yet implemented)</li>
+                <li>blog posts</li>
                 <li>your own categories of stuff</li>
             </ul>
             <h2>Category structure</h2>
