--- a/ui/template.html
+++ b/ui/template.html
@@ -47,7 +47,8 @@
             <a href="shareholder.html">For shareholders</a> |
             <a href="https://github.com/vporton/zondirectory" target="_blank"><img src="images/GitHub-Mark-32px.png" width="16" height="16"/></a></p>
         <p style="display: none; color: red" id="testModeWarnining">Site works in test mode! Change <a href="settings.html">settings</a>.</p>
-        <h1><xi:include href="#title"/></h1>
+        <p style="color: red">The software is yet buggy! Don't use with real money.</p>
+            <h1><xi:include href="#title"/></h1>
         <xi:include href="#body"/>
         <div id="wait" style="display: none; position: fixed; top: 50%; left: 50%; margin-right: -50%;
         transform: translate(-50%, -50%); width: 200px; height: 100px; border: 1px solid red; background: lightgray;">Don't close the window!</div>
