don't display multivoter for update pages

--- a/ui/description.html
+++ b/ui/description.html
@@ -27,8 +27,10 @@
                     <label><input type="checkbox" id="sellInETH" onclick="sellInETHToggle(event)"/> Don't sell in ETH</label></p>
                 <p>in AR: <input type="text" id="priceAR" name="priceAR" required="required"/>
                     <label><input type="checkbox" id="sellInAR" onclick="sellInARToggle(event)"/> Don't sell in AR</label></p>
-                <h2>Categories</h2>
-                <div id="multiVoter"></div>
+                <div id="multiVoterDiv">
+                    <h2>Categories</h2>
+                    <div id="multiVoter"></div>
+                </div>
                 <p><input type="button" value="submit" onclick="createOrUpdateItem()"/></p>
             </form>
             <p id="uploadLink" style="display: none;"><a href="">Upload file</a></p>
