--- a/ui/post-link.html
+++ b/ui/post-link.html
@@ -57,8 +57,10 @@
                     </div>
                 </div>
             </form>
-            <h2>Categories</h2>
-            <div id="multiVoter"></div>
+            <div id="multiVoterDiv">
+                <h2>Categories</h2>
+                <div id="multiVoter"></div>
+            </div>
             <p><input type="button" value="submit" onclick="createOrUpdateItem()"/></p>
         </div>
     </body>
