--- a/ui/edit-category.html
+++ b/ui/edit-category.html
@@ -29,11 +29,13 @@
                     <p>Description: <textarea id="description" name="description"></textarea></p>
                 </div>
             </form>
-            <h2>Parent categories</h2>
-            <p>You vote for parent categories with ETH, with the discount TODO.
-                For your owned parent categories voting is free.
-                Add your new category to at least one parent category to have more traffic.</p>
-            <div id="multiVoter"></div>
+            <div id="multiVoterDiv">
+                <h2>Parent categories</h2>
+                <p>You vote for parent categories with ETH, with the discount TODO.
+                    For your owned parent categories voting is free.
+                    Add your new category to at least one parent category to have more traffic.</p>
+                <div id="multiVoter"></div>
+            </div>
             <p><input type="button" value="Create/Edit" onclick="createCategory()"/></p>
         </div>
     </body>
