file upload in post-link

--- a/ui/post-link.html
+++ b/ui/post-link.html
@@ -21,6 +21,7 @@
         <script src="js/ar-key-chooser.js"></script>
         <script src="js/category-chooser.js"></script>
         <script src="js/upload.js"></script>
+        <script src="js/upload-file.js"></script>
         <script src="js/post-link.js"></script>
     </head>
     <body>
@@ -38,6 +39,7 @@
                     <ul>
                         <li><a href="#tabs-link">Link</a></li>
                         <li><a href="#tabs-blog">Blog post</a></li>
+                        <li><a href="#tabs-upload">Upload file</a></li>
                     </ul>
                     <div id="tabs-link">
                         <p>Link: <input type="url" id="link" name="link" /></p>
@@ -50,12 +52,16 @@
                             <a target="_blank" href="templates.html">Manage</a>
                         </p>
                         <textarea id="blogPost" name="blogPost"></textarea>
-                        <p>AR wallet key file to pay for upload:
-                            <input type="file" id="arWalletKeyFile" name="arWalletKeyFile"/></p>
-                        <p style="font-size: smaller">For security reasons you are recommended to use another Arweave account than
-                            the account to which you receive profit or store significant funds.</p>
+                    </div>
+                    <div id="tabs-upload">
+                        <p>Upload: <input type="file" id="file" name="file" /></p>
+                        <p>You can upload for example an audio or video file or an image.</p>
                     </div>
                 </div>
+                <p>AR wallet key file to pay for upload:
+                    <input type="file" id="arWalletKeyFile" name="arWalletKeyFile"/></p>
+                <p style="font-size: smaller">For security reasons you are recommended to use another Arweave account than
+                    the account to which you receive profit or store significant funds.</p>
             </form>
             <div id="multiVoterDiv">
                 <h2>Categories</h2>
