--- a/ui/entry.html
+++ b/ui/entry.html
@@ -7,7 +7,9 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/web3/1.2.9/web3.min.js"></script>
         <script src="js/addresses2.js"></script>
         <script src="js/common.js"></script>
+        <script src="js/player.js"></script>
         <script src="js/entry.js"></script>
+        <link href="https://vjs.zencdn.net/7.8.4/video-js.css" rel="stylesheet" />
     </head>
     <body>
         <h1 id="title">Link</h1>
@@ -17,7 +19,44 @@
             <p><a href="#" onclick="moreParents(); return false">More...</a> <a id="addParent">Add</a></p>
             <p>Language: <span id="locale"></span></p>
             <p>Title: <span id="link"></span></p>
+            <video
+                style="display: none"
+                id="my-video"
+                class="video-js"
+                controls="controls"
+                preload="auto"
+                width="640"
+                height="264"
+                data-setup="{}"
+            >
+                <source src="MY_VIDEO.mp4" type="video/mp4" />
+                <p class="vjs-no-js">
+                To view this video please enable JavaScript, and consider upgrading to a
+                web browser that
+                <a href="https://videojs.com/html5-video-support/" target="_blank"
+                    >supports HTML5 video</a
+                >
+                </p>
+            </video>
+            <audio
+                style="display: none"
+                id="my-audio"
+                class="video-js"
+                controls="controls"
+                preload="auto"
+                data-setup="{}"
+            >
+                <source src="MY_VIDEO.mp4" type="video/mp4" />
+                <p class="vjs-no-js">
+                To hear this audio please enable JavaScript, and consider upgrading to a
+                web browser that
+                <a href="https://videojs.com/html5-video-support/" target="_blank"
+                    >supports HTML5 audio</a
+                >
+                </p>
+            </audio>
             <p>Description: <span id="description"></span></p>
+            <script src="https://vjs.zencdn.net/7.8.4/video.js"></script>
         </div>
     </body>
 </html>
