--- a/ui/post-link.html
+++ b/ui/post-link.html
@@ -49,6 +49,7 @@
                             <select id="template" name="template">
                                 <option value="">(none)</option>
                             </select>
+                            <input type="button" value="Change" onclick="await changePostTemplate()"/>
                             <a target="_blank" href="templates.html">Manage</a>
                         </p>
                         <textarea id="blogPost" name="blogPost"></textarea>
