fixed posting links

--- a/ui/post-link.html
+++ b/ui/post-link.html
@@ -49,7 +49,7 @@
                             <select id="template" name="template">
                                 <option value="">(none)</option>
                             </select>
-                            <input type="button" value="Change" onclick="await changePostTemplate()"/>
+                            <input type="button" value="Change" onclick="changePostTemplate()"/>
                             <a target="_blank" href="templates.html">Manage</a>
                         </p>
                         <textarea id="blogPost" name="blogPost"></textarea>
