--- a/ui/entry.html
+++ b/ui/entry.html
@@ -9,7 +9,6 @@
         <script src="js/common.js"></script>
         <script src="js/player.js"></script>
         <script src="js/entry.js"></script>
-        <link href="https://vjs.zencdn.net/7.8.4/video-js.css" rel="stylesheet" />
     </head>
     <body>
         <h1 id="title">Link</h1>
@@ -46,7 +45,8 @@
                 preload="auto"
                 data-setup="{}"
             >
-                <source src="MY_VIDEO.mp4" type="video/mp4" />
+                <source />
+                <!-- <source src="https://arweave.net/eAESnl8QnIw9gG4Wj1RvK3dlLepMlIsDEGiYNqTp_zw" type="audio/wav"/> -->
                 <p class="vjs-no-js">
                 To hear this audio please enable JavaScript, and consider upgrading to a
                 web browser that
@@ -56,7 +56,6 @@
                 </p>
             </audio>
             <p>Description: <span id="description"></span></p>
-            <script src="https://vjs.zencdn.net/7.8.4/video.js"></script>
         </div>
     </body>
 </html>
