--- a/ui/entry.html
+++ b/ui/entry.html
@@ -33,8 +33,7 @@
                 To view this video please enable JavaScript, and consider upgrading to a
                 web browser that
                 <a href="https://videojs.com/html5-video-support/" target="_blank"
-                    >supports HTML5 video</a
-                >
+                    >supports HTML5 video</a>
                 </p>
             </video>
             <audio
@@ -50,8 +49,7 @@
                 To hear this audio please enable JavaScript, and consider upgrading to a
                 web browser that
                 <a href="https://videojs.com/html5-video-support/" target="_blank"
-                    >supports HTML5 audio</a
-                >
+                    >supports HTML5 audio</a>
                 </p>
             </audio>
             <p>Description: <span id="description"></span></p>
