preparing to set prices only in ETH and give AR discount

--- a/ui/description.html
+++ b/ui/description.html
@@ -22,11 +22,7 @@
                 <p>Short (meta) description: <textarea id="shortDescription" name="shortDescription"></textarea></p>
                 <p>Description: <textarea id="description" name="description"></textarea></p>
                 <p>License: <textarea id="license" name="license"></textarea></p>
-                <p>Minimal prices:</p>
-                <p>in ETH: <input type="text" id="priceETH" name="priceETH" required="required"/>
-                    <label><input type="checkbox" id="sellInETH" onclick="sellInETHToggle(event)"/> Don't sell in ETH</label></p>
-                <p>in AR: <input type="text" id="priceAR" name="priceAR" required="required"/>
-                    <label><input type="checkbox" id="sellInAR" onclick="sellInARToggle(event)"/> Don't sell in AR</label></p>
+                <p>Minimal price in ETH: <input type="text" id="priceETH" name="priceETH" required="required"/></p>
                 <div id="multiVoterDiv">
                     <h2>Categories</h2>
                     <div id="multiVoter"></div>
