show AR discount

--- a/ui/download.html
+++ b/ui/download.html
@@ -32,7 +32,7 @@
                 <li>in ETH: <span id="priceETH"></span>
                     <input id="buyETH" class="buy" type="button" value="Buy" onclick="payETH()"/>
                     <input type="button" value="Donate" onclick="donateETH()"/></li>
-                <li>in AR: <span id="priceAR"></span> |
+                <li>in AR: <span id="priceAR"></span> (<span id="arDiscount"></span>% discount) |
                     AR wallet key file: <input type="file" id="arWalletKeyFile"/>
                     <input id="buyAR" class="buy" type="button" value="Buy" onclick="payAR()"/>
                     <input type="button" value="Donate" onclick="donateAR()"/></li>
