--- a/ui/shareholder.html
+++ b/ui/shareholder.html
@@ -15,7 +15,7 @@
                 shares for AR profit. Investment is not solicited, but you could buy
                 shares at an exchange (when available).</p>
             <p>Your ETH profit sharing tokens: <span id="tokenETH"></span>
-                (<code id="filesAddressElt"></code> token in MetaMask)</p>
+                (<code id="pstAddressElt"></code> token in MetaMask)</p>
             <p>Your earned amount in ETH: <span id="ETH"></span>
                 <input type="button" value="Withdraw" onclick="withdrawETH()"/></p>
             <p>Your AR wallet (<a href="author.html">Set</a>): <code id="arWallet"></code></p>
