--- a/ui/author.html
+++ b/ui/author.html
@@ -16,6 +16,7 @@
     <body>
         <h1 id="title">Author's Dashboard</h1>
         <div id="body">
+            <p><a href="shareholder.html">Withdraw Ether</a></p>
             <p>Your AR wallet (until it is set all your AR royalties and donations will be sent to the owner of this site!):
                 <code id="arWallet"></code>
                 <input type="button" value="Set AR wallet" onclick="setARWallet()"/>
