--- a/ui/settings.html
+++ b/ui/settings.html
@@ -12,8 +12,8 @@
             <p>This page uses cookies.</p>
             <p>Select your Ethereum network:
                 <select id="web3network" onchange="networkChange()">
-                    <option value="0x1">Mainnet</option>
-                    <option value="0x4">Rinkeby (test mode)</option>
+                    <option value="0x89">Matic</option>
+                    <option value="0x13881">Mumbai (test mode)</option>
                 </select>
             </p>
             <p><a href="templates.html">Blog templates</a></p>
