adding web3modal

--- a/ui/template.html
+++ b/ui/template.html
@@ -13,6 +13,8 @@
         <meta charset="utf-8"/>
         <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
         <link rel="stylesheet" type="text/css" href="css/style.css"/>
+        <script src="js/web3modal/index.js"></script>
+        <script type="text/javascript" src="https://unpkg.com/@myetherwallet/mewconnect-web-client"></script>
         <xi:include href="#head"/>
 
         <!-- Facebook Pixel Code -->
