--- a/ui/settings.html
+++ b/ui/settings.html
@@ -10,6 +10,7 @@
         <h1 id="title">Settings</h1>
         <div id="body">
             <p>This page uses cookies.</p>
+            <p><input type="button" onclick="reconnectWeb3()" value="Re-connect Web3 provider"/></p>
             <p>Select your Ethereum network:
                 <select id="web3network" onchange="networkChange()">
                     <option value="poa-core">POA Core</option>
