--- a/ui/template.html
+++ b/ui/template.html
@@ -14,7 +14,7 @@
         <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
         <link rel="stylesheet" type="text/css" href="css/style.css"/>
         <script src="js/web3modal/index.js"></script>
-        <script type="text/javascript" src="https://unpkg.com/@myetherwallet/mewconnect-web-client"></script>
+        <script type="text/javascript" src="artifacts/mewconnect.js"></script>
         <xi:include href="#head"/>
 
         <!-- Facebook Pixel Code -->
