--- a/ui/settings.html
+++ b/ui/settings.html
@@ -13,8 +13,8 @@
             <p><input type="button" onclick="reconnectWeb3()" value="Re-connect Web3 provider"/></p>
             <p>Select your Ethereum network:
                 <select id="web3network" onchange="networkChange()">
-                    <option value="poa-core">POA Core</option>
-                    <option value="poa-sokol">POA Sokol (test mode)</option>
+                    <option value="0x63">POA Core</option>
+                    <option value="0x4d">POA Sokol (test mode)</option>
                 </select>
             </p>
             <p><a href="templates.html">Blog templates</a></p>
