--- a/ui/download.html
+++ b/ui/download.html
@@ -39,6 +39,7 @@
             </ul>
             <p>File formats:</p>
             <ul id="formats"></ul>
+            <p id="noFiles"><em>No files</em></p>
         </div>
     </body>
 </html>
