--- a/ui/template.html
+++ b/ui/template.html
@@ -39,7 +39,7 @@
         <p><a id="rootLink">Root category</a> |
             <a href="index.html">Recent items</a> |
             <a href="author.html">Author's dashboard</a> |
-            <a href="description.html">Publish files</a> |
+            <a href="description.html">Publish files or sell something</a> |
             <a href="post-link.html">Post link</a> |
             <a href="edit-category.html">Create category</a> |
             <a href="vote.html">Vote</a> |
