--- a/ui/download.html
+++ b/ui/download.html
@@ -23,6 +23,10 @@
                 interface of an equivalent functionality (that is paying the same fee and royalties).
                 Any interface distributing file uploaded through this software complex or a part of this software complex
                 must retain this license notice.</p>
+            <p style="color: red">When buying physical items, we are not responsible for sellers to work in a good manner.
+                We never give any refunds!
+                We cannot even remove fake sellers. To have your item delivered, you must notify the seller about your
+                purchase pointing your shipping address youself! If you cannot contract a seller, it is not our failure.</p>
             <p>Language: <span id="locale"></span></p>
             <p>Title: <span id="title"></span></p>
             <p>Description: <span id="description"></span></p>
