--- a/ui/download.html
+++ b/ui/download.html
@@ -26,11 +26,13 @@
             <p style="color: red">When buying physical items, we are not responsible for sellers to work in a good manner.
                 We never give any refunds!
                 We cannot even remove fake sellers. To have your item delivered, you must notify the seller about your
-                purchase pointing your shipping address youself! If you cannot contract a seller, it is not our failure.</p>
+                purchase pointing your shipping address youself! If you cannot contact a seller, it is not our failure.</p>
             <p>Language: <span id="locale"></span></p>
             <p>Title: <span id="title"></span></p>
             <p>Description: <span id="description"></span></p>
             <p>License: <span id="license"></span></p>
+            <p>Shipping address (optional for digital items): <input type="text" id="shippingAddress"/>
+                (Warning: All your purchase information will be published.)</p>
             <p>Prices:</p>
             <ul>
                 <li>in ETH: <span id="priceETH"></span> ($<span id="priceUSD"></span>)
