--- a/ui/download.html
+++ b/ui/download.html
@@ -31,7 +31,7 @@
             <p>Title: <span id="title"></span></p>
             <p>Description: <span id="description"></span></p>
             <p>License: <span id="license"></span></p>
-            <p>Shipping address and info (optional for digital items): <input type="text" id="shippingAddress"/>
+            <p>Shipping address and info (optional for digital items): <input type="text" id="shippingInfo"/>
                 (Warning: All your purchase information will be published.)</p>
             <p>Prices:</p>
             <ul>
