--- a/ui/download.html
+++ b/ui/download.html
@@ -1,6 +1,6 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
     <head id="head">
-        <title>Download Files</title>
+        <title>Download/Purchase</title>
         <style>
             input[type=text], textarea { width: 100%;}
         </style>
@@ -13,7 +13,7 @@
         <script src="js/download.js"></script>
     </head>
     <body>
-        <h1 id="title">Download Files</h1>
+        <h1 id="title">Download/Purchase</h1>
         <div id="body">
             <p>Categories:</p>
             <ul id="categories"></ul>
