--- a/ui/author-purchases.html
+++ b/ui/author-purchases.html
@@ -15,12 +15,13 @@
     <body>
         <h1 id="title">Recent Purchases of Your Items</h1>
         <div id="body">
-            <h2>My files</h2>
             <table>
                 <thead>
                     <tr>
                         <th>Item</th>
                         <th>Price paid (in ETH)</th>
+                        <th>Author received</th>
+                        <th>Number of items paid for</th>
                         <th>Shipping info</th>
                     </tr>
                 </thead>
