purchasing several items

--- a/ui/download.html
+++ b/ui/download.html
@@ -33,6 +33,7 @@
             <p>License: <span id="license"></span></p>
             <p>Shipping address and info (optional for digital items): <input type="text" id="shippingInfo"/>
                 (Warning: All your purchase information will be published.)</p>
+            <p>Multiply price by <input type="text" id="multiplier" value="1" style="width: 3em"/> (useful if you want to purchase more than one item).</p>
             <p>Prices:</p>
             <ul>
                 <li>in ETH: <span id="priceETH"></span> ($<span id="priceUSD"></span>)
