--- a/ui/template.html
+++ b/ui/template.html
@@ -47,6 +47,7 @@
             <strong><a href="help.html">Help</a></strong> |
             <a href="terms-of-use.html">Terms of use</a> |
             <a href="shareholder.html">For shareholders</a> |
+            <a href="affiliates.html">For affiliates</a> |
             <a href="https://github.com/vporton/zondirectory" target="_blank"><img src="images/GitHub-Mark-32px.png" width="16" height="16"/></a></p>
         <p style="display: none; color: red" id="wrongNetWarning">Your browser isn't configured for POA network. You can only read
             not write.
