--- a/ui/shareholder.html
+++ b/ui/shareholder.html
@@ -15,7 +15,7 @@
     <body>
         <h1 id="title">For shareholders</h1>
         <div id="body">
-            <h2>For author's account shareholders</h2>
+            <h2>For authors and affiliates</h2>
             <p>There are (non-voting) shares of two kinds: shares for ETH profit and
                 shares for AR profit (the latter not yet implemented). You could buy authors'
                 shares at an exchange (when available).</p>
